--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,15 @@
         🤖
     </span>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-65821946-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-65821946-1');
+</script>
 </body>
 
 </html>
