add meta description

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IAmHeiner</title>
+    <meta name="description" content="Analista programador .Net, soluiciones web y moviles." />
+
     <style>
         html{
             padding: 0px;
